logs/dag_id=weather_dag_api/run_id=manual__2023-04-26T18:29:57.143807+00:00/task_id=cities.insert_data_Odesa/attempt=1.log
[2023-04-26T18:30:50.973+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-26T18:29:57.143807+00:00 [queued]>
[2023-04-26T18:30:51.340+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-26T18:29:57.143807+00:00 [queued]>
[2023-04-26T18:30:51.342+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T18:30:51.343+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-26T18:30:51.352+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T18:30:51.968+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Odesa> on 2023-04-26 18:29:57.143807+00:00
[2023-04-26T18:30:52.243+0000] {standard_task_runner.py:55} INFO - Started process 1600 to run task
[2023-04-26T18:30:52.264+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Odesa', 'manual__2023-04-26T18:29:57.143807+00:00', '--job-id', '281', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpexxzszj5']
[2023-04-26T18:30:52.267+0000] {standard_task_runner.py:83} INFO - Job 281: Subtask cities.insert_data_Odesa
[2023-04-26T18:30:56.214+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-26T18:29:57.143807+00:00 [running]> on host b46a99c748bd
[2023-04-26T18:30:59.686+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Odesa
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T18:29:57.143807+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-26T18:29:57.143807+00:00
[2023-04-26T18:30:59.788+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (temp) VALUES (ti.xcom_pull(f"cities.process_data_{location}"))
[2023-04-26T18:30:59.924+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T18:31:06.528+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T18:31:06.600+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (temp) VALUES (ti.xcom_pull(f"cities.process_data_{location}")), parameters: None
[2023-04-26T18:31:06.648+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ""cities.process_data_{location}""
LINE 1: ...RT INTO measurements (temp) VALUES (ti.xcom_pull(f"cities.pr...
                                                             ^

[2023-04-26T18:31:06.822+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Odesa, execution_date=20230426T182957, start_date=20230426T183050, end_date=20230426T183106
[2023-04-26T18:31:06.881+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 281 for task cities.insert_data_Odesa (syntax error at or near ""cities.process_data_{location}""
LINE 1: ...RT INTO measurements (temp) VALUES (ti.xcom_pull(f"cities.pr...
                                                             ^
; 1600)
[2023-04-26T18:31:06.943+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-26T18:31:07.229+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
